# project-scrape-networking

./: README.md  project-scrape.excalidraw
scrape-bevy-debugging/: Cargo.toml  README.md
scrape-bevy-debugging/src/: main.rs
scrape-collision/: Cargo.toml  README.md
scrape-collision/src/: collider.rs  helpers.rs  lib.rs  rapier.rs
scrape-gltf-loader/: .gitignore  Cargo.toml  README.md  docs.md  session.session
scrape-gltf-loader/blend-files/: Envoirment.blend  Envoirment.glb  output_Envoirment.blend.txt
scrape-gltf-loader/src/: conversion.rs  lib.rs  loader.rs
scrape-gltf-loader/src/core/: enums.rs  errors.rs  mod.rs  utility.rs
scrape-gltf-loader/src/indices/: index_vec_iterator.rs  mod.rs
scrape-gltf-loader/src/mesh/: mesh_primitive.rs  mod.rs
scrape-gltf-loader/src/mesh/attributes/: attribute_data.rs  attribute_data_format.rs  attribute_metadata.rs  mod.rs
scrape-gltf-loader/src/vertex_iterator/: buffer_accessor.rs  mod.rs  normalization.rs
scrape-zenitsu/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
scrape-zenitsu/data/: environment.gltf
scrape-zenitsu/src/: bullet.rs  game_info.rs  game_server.rs  geometry.rs  inbound_server.rs  lib.rs  main.rs  message_queue.rs  networking.rs  player.rs  utility.rs
scrape-zenitsu/src/protos/: input.proto  output.proto
