[package]
name = "scrape-bevy-debugging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_rapier3d = { version = "0.24.0", features = [  ] }
bevy_editor_pls = "0.7.0"
scrape-gltf-loader = { path = "../../project-scrape/scrape-gltf-loader/" }
