[package]
name = "scrape-collision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier3d = "0.17.2"
scrape-gltf-loader = { path = "../scrape-gltf-loader/" }

# Add this to your Cargo.toml
[profile.dev.package.rapier3d]
opt-level = 3
