[package]
name = "udp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12.1"
prost-types = "0.12.1"
rand = "0.8.5"
scrape-collision = { path = "../scrape-collision/" }
#scrape-collision = { git = "https://github.com/PegasusMKD/project-scrape-networking.git" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bytes]
version = "1.5.0"


[dependencies.tokio]
version = "1.32.0"
features = [
  "rt", 
  "macros",
  "net",
  "sync",
  "time",
  "rt-multi-thread",
]

[dependencies.uuid]
version = "1.4.1"
features = ["v4", "fast-rng", "macro-diagnostics"]

[build-dependencies]
prost-build = "0.12.1"

